<?xml version="1.0" encoding="utf-8"?><!--test.xml-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e5e5e5"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/pengyou"
            android:contentDescription="@string/pengyou" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/pengyou"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/saoyisao"
            android:contentDescription="@string/saoyisao" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/saoyisao"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/yaoyiyao"
            android:contentDescription="@string/yaoyiyao" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/yaoyiyao"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/kanyikan"
            android:contentDescription="@string/kanyikan" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/kanyikan"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/souyisou"
            android:contentDescription="@string/souyisou" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/souyisou"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="20dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/gouwu"
            android:contentDescription="@string/gouwu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/gouwu"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/youxi"
            android:contentDescription="@string/youxi" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/youxi"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>

    <View
        android:layout_width="wrap_content"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#fff"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="15dp"
            android:background="@mipmap/xiaochengxu"
            android:contentDescription="@string/xiaochengxu" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/xiaochengxu"
            android:textColor="#333"
            android:textSize="21sp"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="15dp"
            android:background="@mipmap/right"
            android:contentDescription="@string/right" />

    </LinearLayout>


</LinearLayout>